--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,15 @@ tmp/
 # Allow committed placeholder logs
 !logs/ingest.log
 !logs/replication.log
+
+# ---- Bulk datasets (ignore) ----
+311 Cases/**
+!311 Cases/README.md
+
+data/csv_raw/311/**
+!data/csv_raw/311/README.md
+
+# Optional sample area (tracked)
+!data/samples/
+!data/samples/311/
+!data/samples/311/*.json
