feat(core): add evictions staging→core upsert script and docs

--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "start:ingest": "ts-node services/ingest/csvLoader.ts",
     "run:evictions:landing": "ts-node services/ingest/csvLoader.ts",
     "run:evictions:landing:write": "DRY_RUN=false ts-node services/ingest/csvLoader.ts",
-    "run:evictions:staging": "ts-node services/transforms/evictionsTransform.ts"
+    "run:evictions:staging": "ts-node services/transforms/evictionsTransform.ts",
+    "run:evictions:core": "ts-node services/transforms/evictionsToCore.ts"
   },
   "keywords": [],
   "author": "",
