--- a/.gitignore
+++ b/.gitignore
@@ -1,207 +1,92 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[codz]
-*$py.class
-
-# C extensions
-*.so
-
-# Distribution / packaging
-.Python
-build/
-develop-eggs/
+node_modules/
+.env*
 dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-share/python-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-MANIFEST
-
-# PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
-*.spec
-
-# Installer logs
-pip-log.txt
-pip-delete-this-directory.txt
-
-# Unit test / coverage reports
-htmlcov/
-.tox/
-.nox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py.cover
-.hypothesis/
-.pytest_cache/
-cover/
-
-# Translations
-*.mo
-*.pot
-
-# Django stuff:
+coverage/
+.DS_Store
 *.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
+.pnpm-store/
+.turbo/
+tmp/
+# Allow committed placeholder logs
+!logs/ingest.log
+!logs/replication.log
 
-# Flask stuff:
-instance/
-.webassets-cache
+# ---- Bulk datasets (ignore) ----
+311 Cases/**
+!311 Cases/README.md
 
-# Scrapy stuff:
-.scrapy
+data/csv_raw/311/**
+!data/csv_raw/311/README.md
 
-# Sphinx documentation
-docs/_build/
+# Optional sample area (tracked)
+!data/samples/
+!data/samples/311/
+!data/samples/311/*.json
 
-# PyBuilder
-.pybuilder/
-target/
+# ---- Bulk datasets (ignore) round 2 ----
+.vscode/
 
-# Jupyter Notebook
-.ipynb_checkpoints
+Archived Raw Data/**
+!Archived Raw Data/README.md
 
-# IPython
-profile_default/
-ipython_config.py
+BOS MINUTES/**
+!BOS MINUTES/README.md
 
-# pyenv
-#   For a library or package, you might want to ignore these files since the code is
-#   intended to run in multiple environments; otherwise, check them in:
-# .python-version
+SF BOS MINUTES/**
+!SF BOS MINUTES/README.md
 
-# pipenv
-#   According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-#   However, in case of collaboration, if having platform-specific dependencies or dependencies
-#   having no cross-platform support, pipenv may install dependencies that don't work, or not
-#   install all needed dependencies.
-#Pipfile.lock
+TABULATED BOS MEETING MINUTES/**
+!TABULATED BOS MEETING MINUTES/README.md
 
-# UV
-#   Similar to Pipfile.lock, it is generally recommended to include uv.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#uv.lock
+Campaign Finance/**
+!Campaign Finance/README.md
 
-# poetry
-#   Similar to Pipfile.lock, it is generally recommended to include poetry.lock in version control.
-#   This is especially recommended for binary packages to ensure reproducibility, and is more
-#   commonly ignored for libraries.
-#   https://python-poetry.org/docs/basic-usage/#commit-your-poetrylock-file-to-version-control
-#poetry.lock
-#poetry.toml
+Contact Lobbyist Activity/**
+!Contact Lobbyist Activity/README.md
 
-# pdm
-#   Similar to Pipfile.lock, it is generally recommended to include pdm.lock in version control.
-#   pdm recommends including project-wide configuration in pdm.toml, but excluding .pdm-python.
-#   https://pdm-project.org/en/latest/usage/project/#working-with-version-control
-#pdm.lock
-#pdm.toml
-.pdm-python
-.pdm-build/
+Lobbyist Activity Directory/**
+!Lobbyist Activity Directory/README.md
 
-# pixi
-#   Similar to Pipfile.lock, it is generally recommended to include pixi.lock in version control.
-#pixi.lock
-#   Pixi creates a virtual environment in the .pixi directory, just like venv module creates one
-#   in the .venv directory. It is recommended not to include this directory in version control.
-.pixi
+Lobbyist Directory/**
+!Lobbyist Directory/README.md
 
-# PEP 582; used by e.g. github.com/David-OConnor/pyflow and github.com/pdm-project/pdm
-__pypackages__/
+Building Permits/**
+!Building Permits/README.md
 
-# Celery stuff
-celerybeat-schedule
-celerybeat.pid
+Zoning_Master/**
+!Zoning_Master/README.md
 
-# SageMath parsed files
-*.sage.py
+Supervisor Policy Positions Campaigned On/**
+!Supervisor Policy Positions Campaigned On/README.md
 
-# Environments
-.env
-.envrc
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
+Crime2/**
+!Crime2/README.md
 
-# Spyder project settings
-.spyderproject
-.spyproject
+Housing/**
+!Housing/README.md
 
-# Rope project settings
-.ropeproject
+Evictions/**
+!Evictions/README.md
 
-# mkdocs documentation
-/site
+Permitting_Delays_Archive/**
+!Permitting_Delays_Archive/README.md
 
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
+SF_Dashboard_LatestExports/**
+!SF_Dashboard_LatestExports/README.md
 
-# Pyre type checker
-.pyre/
+# Tracked sample areas
+!data/samples/
+!data/samples/**
 
-# pytype static type analyzer
-.pytype/
+# ---- Bulk datasets (ignore) round 3 ----
+Behested_Payments_SF_Master/**
+!Behested_Payments_SF_Master/README.md
 
-# Cython debug symbols
-cython_debug/
+Committee Meetings/**
+!Committee Meetings/README.md
 
-# PyCharm
-#  JetBrains specific template is maintained in a separate JetBrains.gitignore that can
-#  be found at https://github.com/github/gitignore/blob/main/Global/JetBrains.gitignore
-#  and can be added to the global gitignore or merged into this file.  For a more nuclear
-#  option (not recommended) you can uncomment the following to ignore the entire idea folder.
-#.idea/
+Crime/**
+!Crime/README.md
 
-# Abstra
-# Abstra is an AI-powered process automation framework.
-# Ignore directories containing user credentials, local state, and settings.
-# Learn more at https://abstra.io/docs
-.abstra/
-
-# Visual Studio Code
-#  Visual Studio Code specific template is maintained in a separate VisualStudioCode.gitignore 
-#  that can be found at https://github.com/github/gitignore/blob/main/Global/VisualStudioCode.gitignore
-#  and can be added to the global gitignore or merged into this file. However, if you prefer, 
-#  you could uncomment the following to ignore the entire vscode folder
-# .vscode/
-
-# Ruff stuff:
-.ruff_cache/
-
-# PyPI configuration file
-.pypirc
-
-# Cursor
-#  Cursor is an AI-powered code editor. `.cursorignore` specifies files/directories to
-#  exclude from AI features like autocomplete and code analysis. Recommended for sensitive data
-#  refer to https://docs.cursor.com/context/ignore-files
-.cursorignore
-.cursorindexingignore
-
-# Marimo
-marimo/_static/
-marimo/_lsp/
-__marimo__/
+SF_Crime_Weekly_Exports/**
+!SF_Crime_Weekly_Exports/README.md
