--- a/package.json
+++ b/package.json
@@ -10,15 +10,17 @@
     "test": "vitest run",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
-    "typecheck": "tsc --noEmit",
-    "build": "tsc -p tsconfig.json",
-    "lint": "eslint . --ext .ts",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "build": "tsc -p tsconfig.build.json",
+    "lint": "eslint . --max-warnings=0",
+    "lint:changed": "git diff --cached --name-only --diff-filter=d | grep -E '\\.(js|jsx|ts|tsx)$' | xargs --no-run-if-empty eslint --max-warnings=0",
+    "lint:fix": "eslint . --fix",
     "format": "prettier -w .",
-    "start:ingest": "ts-node services/ingest/csvLoader.ts",
-    "run:evictions:landing": "ts-node services/ingest/csvLoader.ts",
-    "run:evictions:landing:write": "DRY_RUN=false ts-node services/ingest/csvLoader.ts",
-    "run:evictions:staging": "ts-node services/transforms/evictionsTransform.ts",
-    "run:evictions:core": "ts-node services/transforms/evictionsToCore.ts",
+    "start:ingest": "tsx services/ingest/csvLoader.ts",
+    "run:evictions:landing": "tsx services/ingest/csvLoader.ts",
+    "run:evictions:landing:write": "DRY_RUN=false tsx services/ingest/csvLoader.ts",
+    "run:evictions:staging": "tsx services/transforms/evictionsTransform.ts",
+    "run:evictions:core": "tsx services/transforms/evictionsToCore.ts",
     "registry:sf": "node scripts/build-datasf-index.mjs",
     "registry:socrata:sf": "node scripts/build-datasf-index.mjs --domain=data.sfgov.org --out=municipalities/CA/SF/directory.json --tokenEnv=SOCRATA_APP_ID",
     "registry:socrata:detroit": "node scripts/build-datasf-index.mjs --domain=data.detroitmi.gov --out=municipalities/MI/Detroit/directory.json --tokenEnv=SOCRATA_APP_ID",
@@ -27,21 +29,36 @@
     "registry:refresh": "npm run registry:socrata:sf && npm run registry:socrata:detroit",
     "registry:merge": "node scripts/merge-registries.mjs",
     "registry:load:pg": "node scripts/registry-to-pg.mjs --files=municipalities/CA/SF/directory.json,municipalities/MI/Detroit/directory.json",
-    "registry:all": "npm run registry:refresh && npm run registry:merge && npm run registry:load:pg"
+    "registry:all": "npm run registry:refresh && npm run registry:merge && npm run registry:load:pg",
+    "env:local:init": "node scripts/env-local-init.mjs",
+    "env:validate": "node scripts/env-validate.mjs",
+    "check:env-import": "node scripts/check-env-import.mjs"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "devDependencies": {
+    "@eslint/js": "^9.0.0",
+    "@types/eslint": "^9.0.0",
     "@types/node": "^24.3.1",
     "@types/pg": "^8.15.5",
+    "@types/pg-copy-streams": "^1.2.5",
+    "@typescript-eslint/eslint-plugin": "^8.42.0",
+    "@typescript-eslint/parser": "^8.42.0",
     "@vitest/ui": "^3.2.4",
     "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-plugin-import": "^2.32.0",
+    "eslint-import-resolver-typescript": "^3.6.0",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-n": "^17.0.0",
+    "eslint-plugin-promise": "^7.0.0",
+    "eslint-plugin-regexp": "^2.0.0",
+    "eslint-plugin-security": "^3.0.0",
+    "eslint-plugin-sonarjs": "^3.0.5",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
   },
