feat(env): lazy getEnv + host-based Socrata token; remove import-time side effects - refactor: replace legacy {env} imports with getEnv() - fix(bootstrap): export getEnv only (no top-level validation) - feat(http): add socrataFetch with auto X-App-Token via resolver - test(arch): ESLint v9 deterministic checks; typed lintText options - docs: normalize env docs under __docs__/config; expand .env.example with DB/runtime placeholders

--- a/.env.example
+++ b/.env.example
@@ -1,43 +1,25 @@
-# ===== DATABASE =====
-# Postgres connection URL with embedded credentials
-DATABASE_URL=postgres://dev:dev@localhost:5432/civicue
-# Vector embedding dimensions (must match your embedding model)
-PGVECTOR_DIM=1536
-
-# ===== SOCRATA =====
-# Required: App ID for Socrata API access
-SOCRATA_APP_ID=
-# Optional: App secret for higher rate limits
-SOCRATA_APP_SECRET=
-
-# ===== CKAN =====
-# Base URL for CKAN instance (e.g., https://data.detroitmi.gov)
-CKAN_BASE_URL=
-# API key for private/org access (header: X-CKAN-API-Key)
-CKAN_API_KEY=
-
-# ===== ARCGIS =====
-# Portal URL for ArcGIS Online or Enterprise
-ARCGIS_PORTAL_URL=https://www.arcgis.com
-# API key for ArcGIS services
-ARCGIS_API_KEY=
-
-# ===== AI / EMBEDDINGS =====
-# Model name for generating embeddings
-EMBEDDING_MODEL=text-embedding-3-large
-# API keys for AI services (at least one required)
-OPENAI_API_KEY=
+# --- AI (Taskmaster) ---
 ANTHROPIC_API_KEY=
-GOOGLE_API_KEY=
+PERPLEXITY_API_KEY=
+OPENAI_API_KEY=
+OPENROUTER_API_KEY=
 
-# ===== RUNTIME =====
-# Application environment
-NODE_ENV=development
-# Server port
-PORT=3000
-# HTTP request timeout in milliseconds
-REQUEST_TIMEOUT_MS=10000
-# Maximum retry attempts for failed requests
-RETRY_MAX_ATTEMPTS=3
-# Base delay between retries in milliseconds
-RETRY_BASE_DELAY_MS=250
+# --- Socrata (global default) ---
+SOCRATA_APP_TOKEN=
+
+# --- Socrata domain overrides (host-based) ---
+# Pattern: SOCRATA__{HOST}__APP_TOKEN
+SOCRATA__data.sfgov.org__APP_TOKEN=
+SOCRATA__data.cityofnewyork.us__APP_TOKEN=
+SOCRATA__data.austintexas.gov__APP_TOKEN=
+
+# --- Database (local dev) ---
+# DATABASE_URL=postgres://dev:dev@localhost:5432/civicue
+# PGVECTOR_DIM=1536
+
+# --- Runtime (optional overrides) ---
+# NODE_ENV=development
+# PORT=3000
+# REQUEST_TIMEOUT_MS=10000
+# RETRY_MAX_ATTEMPTS=3
+# RETRY_BASE_DELAY_MS=250
