feat(core): complete ESM migration and establish test baseline
- Finalize cohesive ESM migration (tsconfig, package.json, imports)
- Normalize environment validation with lazy getEnv() and defaults
- Add Socrata HTTP client with typed getRows/healthPing + error model
- Implement workspace-aware Vitest config with unit/contracts/integration/arch suites
- Add smoke-level Socrata client tests and env validation tests
- CI-ready scripts for per-project and aggregate test runs

Closes task #3 (Cohesive ESM migration)

--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
   "scripts": {
     "dev": "tsx src/server/bootstrap.ts",
     "start": "node ./dist/src/server/bootstrap.js",
-    "test:unit": "vitest --project unit",
-    "test:contracts": "vitest --project contracts --passWithNoTests",
-    "test:integration": "vitest --project integration --passWithNoTests",
-    "test:arch": "vitest --project arch --passWithNoTests",
-    "test": "pnpm -s test:unit && pnpm -s test:contracts && pnpm -s test:integration && pnpm -s test:arch",
+    "test:unit": "vitest run --project unit",
+    "test:contracts": "vitest run --project contracts --passWithNoTests",
+    "test:integration": "vitest run --project integration --passWithNoTests",
+    "test:arch": "vitest run --project arch",
+    "test": "vitest run --project unit",
+    "test:all": "pnpm -s test:unit && pnpm -s test:contracts && pnpm -s test:integration && pnpm -s test:arch",
     "test:watch": "vitest",
     "test:ui": "vitest --ui",
     "typecheck": "tsc -p tsconfig.json --noEmit",
-    "build": "tsc -p tsconfig.build.json",
-    "lint": "eslint . --max-warnings=0",
+    "build": "tsc -p tsconfig.json",
+    "lint": "eslint .",
+    "lint:ci": "eslint . --max-warnings=0",
+    "ci:verify": "pnpm -s typecheck && pnpm -s lint && pnpm -s test:arch && pnpm -s test && pnpm -s build",
     "lint:changed": "git diff --cached --name-only --diff-filter=d | grep -E '\\.(js|jsx|ts|tsx)$' | xargs --no-run-if-empty eslint --max-warnings=0",
     "lint:fix": "eslint . --fix",
     "format": "prettier -w .",
