chore(test/types): isolate tsd compile-time tests from tsc & lint
- move openapi tsd suite under tests/types and add tsd.json
- tsconfig: include src/generated/**/*.ts; exclude tests/types/**/*.test-d.ts
- keep vitest unit suites green; no product code changes
- fix lint:changed to suppress ignore warnings

--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "lint": "eslint .",
     "lint:ci": "eslint . --max-warnings=0",
     "ci:verify": "pnpm -s typecheck && pnpm -s lint && pnpm -s test:arch && pnpm -s test && pnpm -s build",
-    "lint:changed": "git diff --cached --name-only --diff-filter=d | grep -E '\\.(js|jsx|ts|tsx)$' | xargs --no-run-if-empty eslint --max-warnings=0",
+    "lint:changed": "git diff --cached --name-only --diff-filter=d | grep -E '\\.(js|jsx|ts|tsx)$' | xargs --no-run-if-empty eslint --max-warnings=0 --no-warn-ignored",
     "lint:fix": "eslint . --fix",
     "format": "prettier -w .",
     "start:ingest": "tsx services/ingest/csvLoader.ts",
@@ -42,7 +42,18 @@
     "env:local:init": "node scripts/env-local-init.mjs",
     "env:validate": "node scripts/env-validate.mjs",
     "check:env-import": "node scripts/check-env-import.mjs",
-    "secret-scan": "sh -c 'command -v gitleaks >/dev/null 2>&1 && gitleaks detect --no-git --redact -c .gitleaks.toml || (echo \"gitleaks not found. Install: brew install gitleaks\" >&2; exit 1)'"
+    "secret-scan": "sh -c 'command -v gitleaks >/dev/null 2>&1 && gitleaks detect --no-git --redact -c .gitleaks.toml || (echo \"gitleaks not found. Install: brew install gitleaks\" >&2; exit 1)'",
+    "openapi:lint": "spectral lint openapi.yaml",
+    "openapi:lint:ci": "spectral lint openapi.yaml --fail-severity=warn",
+    "openapi:gen": "openapi-typescript openapi.yaml -o src/generated/openapi-types.d.ts --export-type",
+    "openapi:check": "pnpm -s openapi:gen && git diff --exit-code -- src/generated/openapi-types.d.ts",
+    "openapi:regen": "pnpm openapi:gen && pnpm typecheck",
+    "tsd": "tsd",
+    "spec:lint": "spectral lint openapi.yaml --fail-severity=warn",
+    "spec:types": "openapi-typescript openapi.yaml -o src/generated/openapi.ts --export-type",
+    "spec:check-types": "pnpm -s spec:types && git diff --exit-code -- src/generated/openapi.ts",
+    "spec:tsd": "tsd",
+    "spec:all": "pnpm -s spec:lint && pnpm -s spec:check-types && pnpm -s spec:tsd"
   },
   "keywords": [],
   "author": "",
@@ -50,6 +61,7 @@
   "type": "module",
   "devDependencies": {
     "@eslint/js": "^9.0.0",
+    "@stoplight/spectral-cli": "^6.15.0",
     "@types/eslint": "^9.0.0",
     "@types/node": "^24.3.1",
     "@types/pg": "^8.15.5",
@@ -66,8 +78,10 @@
     "eslint-plugin-regexp": "^2.0.0",
     "eslint-plugin-security": "^3.0.0",
     "eslint-plugin-sonarjs": "^3.0.5",
+    "openapi-typescript": "^7.9.1",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
+    "tsd": "^0.33.0",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
     "vitest": "^3.2.4"
