chore: update dependencies and lock file

--- a/package.json
+++ b/package.json
@@ -7,89 +7,80 @@
     "test": "tests"
   },
   "scripts": {
-  "prepare": "husky",
-  "dev": "tsx src/server/bootstrap.ts",
-  "start": "node ./dist/src/server/bootstrap.js",
-
-  "// REVIEW / REPORT": "",
-  "review": "node scripts/dev-utils/review.mjs",
-  "review:preflight": "git diff --cached --name-only --diff-filter=d | grep -E '\\.(js|jsx|ts|tsx|json|yaml|yml|md)$' | xargs --no-run-if-empty pnpm -s verify:precommit",
-
-  "report:staged": "mkdir -p artifacts && (echo \"# Change Report (STAGED)\"; echo; echo \"## Diff Summary\"; echo '```text'; git diff --staged --stat || true; echo '```'; echo; echo \"## Patch\"; echo '```diff'; git -c color.ui=always --no-pager diff --staged -- . ':(exclude)*.png' ':(exclude)*.jpg' ':(exclude)*.jpeg' ':(exclude)*.gif' ':(exclude)*.lock' || true; echo '```'; echo; echo \"## Lint\"; echo '```text'; pnpm -s lint || true; echo '```'; echo; echo \"## Typecheck\"; echo '```text'; pnpm -s typecheck || true; echo '```'; echo; echo \"## Tests\"; echo '```text'; pnpm -s test || true; echo '```'; echo; echo \"## OpenAPI\"; echo '```text'; pnpm -s openapi:lint || true; pnpm -s openapi:check || true; echo '```'; echo; echo \"## Security\"; echo '```text'; pnpm -s secret-scan || true; echo '```') > artifacts/report-staged.md && echo '✅ artifacts/report-staged.md'",
-
-  "report:full": "mkdir -p artifacts && (echo \"# Change Report (FULL)\"; echo; echo \"## Diff Summary\"; echo '```text'; git diff --stat || true; echo '```'; echo; echo \"## Patch\"; echo '```diff'; git -c color.ui=always --no-pager diff -- . ':(exclude)*.png' ':(exclude)*.jpg' ':(exclude)*.jpeg' ':(exclude)*.gif' ':(exclude)*.lock' || true; echo '```'; echo; echo \"## Lint\"; echo '```text'; pnpm -s lint || true; echo '```'; echo; echo \"## Typecheck\"; echo '```text'; pnpm -s typecheck || true; echo '```'; echo; echo \"## Tests\"; echo '```text'; pnpm -s test:all || pnpm -s test || true; echo '```'; echo; echo \"## OpenAPI\"; echo '```text'; pnpm -s openapi:lint || true; pnpm -s openapi:check || true; echo '```'; echo; echo \"## Security\"; echo '```text'; pnpm -s secret-scan || true; echo '```') > artifacts/report-full.md && echo '✅ artifacts/report-full.md'",
-
-  "// TESTS": "",
-  "test:unit": "vitest run --project unit",
-  "test:contracts": "vitest run --project contracts --passWithNoTests",
-  "test:integration": "vitest run --project integration --passWithNoTests",
-  "test:arch": "vitest run --project arch",
-  "test": "vitest run --project unit",
-  "test:all": "pnpm -s test:unit && pnpm -s test:contracts && pnpm -s test:integration && pnpm -s test:arch",
-  "test:watch": "vitest",
-  "test:ui": "vitest --ui",
-
-  "// TYPE / LINT / FORMAT": "",
-  "typecheck": "tsc -p tsconfig.json --noEmit",
-  "build": "tsc -p tsconfig.build.json",
-  "lint": "eslint .",
-  "lint:ci": "eslint . --max-warnings=0",
-  "lint:changed": "git diff --cached --name-only --diff-filter=d | grep -E '\\.(js|jsx|ts|tsx)$' | xargs --no-run-if-empty eslint --max-warnings=0 --no-warn-ignored",
-  "lint:fix": "eslint . --fix",
-  "format": "prettier -w .",
-  "format:check": "prettier -c .",
-
-  "// CI SUITES": "",
-  "ci:fast": "pnpm -s typecheck && pnpm -s lint:ci && pnpm -s test",
-  "ci:verify": "pnpm -s typecheck && pnpm -s lint:ci && pnpm -s test:all && pnpm -s openapi:lint:ci && pnpm -s openapi:check && pnpm -s secret-scan && pnpm -s build",
-
-  "// REGISTRY / INGEST": "",
-  "start:ingest": "tsx services/ingest/csvLoader.ts",
-  "run:evictions:landing": "tsx services/ingest/csvLoader.ts",
-  "run:evictions:landing:write": "DRY_RUN=false tsx services/ingest/csvLoader.ts",
-  "run:evictions:staging": "tsx services/transforms/evictionsTransform.ts",
-  "run:evictions:core": "tsx services/transforms/evictionsToCore.ts",
-  "registry:sf": "node scripts/build-datasf-index.mjs",
-  "registry:socrata:sf": "node scripts/build-datasf-index.mjs --domain=data.sfgov.org --out=municipalities/CA/SF/directory.json --tokenEnv=SOCRATA_APP_ID",
-  "registry:socrata:sf:build": "node scripts/build-datasf-index.mjs --domain=data.sfgov.org --out=municipalities/CA/SF/directory.json",
-  "registry:socrata:sf:validate": "node scripts/validate-datasf-index.mjs --file=municipalities/CA/SF/directory.json --domain=data.sfgov.org",
-  "registry:socrata:sf:rebuild": "pnpm run registry:socrata:sf:build && pnpm run registry:socrata:sf:validate",
-  "registry:socrata:detroit": "node scripts/build-datasf-index.mjs --domain=data.detroitmi.gov --out=municipalities/MI/Detroit/directory.json --tokenEnv=SOCRATA_APP_ID",
-  "registry:ckan:sandiego": "node scripts/build-ckan-index.mjs --base=https://data.sandiego.gov --out=municipalities/CA/SanDiego/directory.ckan.json --tokenEnv=SAN_DIEGO_CKAN_TOKEN",
-  "registry:arcgis:example": "node scripts/build-arcgis-index.mjs --portal=https://www.arcgis.com --out=municipalities/ARCGIS/directory.arcgis.json --query=type:(\"Feature Service\" OR \"Feature Layer\") AND owner:esri",
-  "registry:refresh": "npm run registry:socrata:sf && npm run registry:socrata:detroit",
-  "registry:merge": "node scripts/merge-registries.mjs",
-  "registry:load:pg": "node scripts/registry-to-pg.mjs --files=municipalities/CA/SF/directory.json,municipalities/MI/Detroit/directory.json",
-  "registry:all": "npm run registry:refresh && npm run registry:merge && npm run registry:load:pg",
-
-  "// DISCOVERY PRUNE": "",
-  "sf:discovery:prune": "pnpm -s build && node scripts/prune-sf-discovery.mjs --in=data/sf/directory.json --outDir=data/sf",
-
-  "// ENV / SECURITY / OPENAPI": "",
-  "env:local:init": "node scripts/env-local-init.mjs",
-  "env:validate": "node scripts/env-validate.mjs",
-  "check:env-import": "node scripts/check-env-import.mjs",
-
-  "secret-scan": "sh -c 'command -v gitleaks >/dev/null 2>&1 && gitleaks detect --no-git --redact -c .gitleaks.toml || (echo \"gitleaks not found. Install: brew install gitleaks\" >&2; exit 1)'",
-  "secret:staged": "node -e \"if(process.env.GITLEAKS_ALLOW==='1'){console.log('gitleaks bypassed (GITLEAKS_ALLOW=1)');process.exit(0)}\" && gitleaks detect --staged --redact -v",
-
-  "openapi:lint": "spectral lint openapi.yaml",
-  "openapi:lint:ci": "spectral lint openapi.yaml --fail-severity=warn",
-  "openapi:gen": "openapi-typescript openapi.yaml -o src/generated/openapi-types.d.ts --export-type",
-  "openapi:check": "pnpm -s openapi:gen && git diff --exit-code -- src/generated/openapi-types.d.ts",
-  "openapi:regen": "pnpm openapi:gen && pnpm typecheck",
-
-  "// TSD / SPEC": "",
-  "tsd": "tsd",
-  "spec:lint": "spectral lint openapi.yaml --fail-severity=warn",
-  "spec:types": "openapi-typescript openapi.yaml -o src/generated/openapi.ts --export-type",
-  "spec:check-types": "pnpm -s spec:types && git diff --exit-code -- src/generated/openapi.ts",
-  "spec:tsd": "tsd",
-  "spec:all": "pnpm -s spec:lint && pnpm -s spec:check-types && pnpm -s spec:tsd",
-
-  "// PRECOMMIT TARGET": "",
-  "verify:precommit": "pnpm -s format:check && pnpm -s lint:changed && node scripts/check-review-files.mjs && node scripts/scan-staged-for-todos.mjs"
-},
+    "prepare": "husky",
+    "dev": "tsx src/server/bootstrap.ts",
+    "start": "node ./dist/src/server/bootstrap.js",
+    "// REVIEW / REPORT": "",
+    "review": "node scripts/dev-utils/review.mjs",
+    "review:preflight": "git diff --cached --name-only --diff-filter=d | grep -E '\\.(js|jsx|ts|tsx|json|yaml|yml|md)$' | xargs --no-run-if-empty pnpm -s verify:precommit",
+    "report:staged": "mkdir -p artifacts && (echo \"# Change Report (STAGED)\"; echo; echo \"## Diff Summary\"; echo '```text'; git diff --staged --stat || true; echo '```'; echo; echo \"## Patch\"; echo '```diff'; git -c color.ui=always --no-pager diff --staged -- . ':(exclude)*.png' ':(exclude)*.jpg' ':(exclude)*.jpeg' ':(exclude)*.gif' ':(exclude)*.lock' || true; echo '```'; echo; echo \"## Lint\"; echo '```text'; pnpm -s lint || true; echo '```'; echo; echo \"## Typecheck\"; echo '```text'; pnpm -s typecheck || true; echo '```'; echo; echo \"## Tests\"; echo '```text'; pnpm -s test || true; echo '```'; echo; echo \"## OpenAPI\"; echo '```text'; pnpm -s openapi:lint || true; pnpm -s openapi:check || true; echo '```'; echo; echo \"## Security\"; echo '```text'; pnpm -s secret-scan || true; echo '```') > artifacts/report-staged.md && echo '✅ artifacts/report-staged.md'",
+    "report:full": "mkdir -p artifacts && (echo \"# Change Report (FULL)\"; echo; echo \"## Diff Summary\"; echo '```text'; git diff --stat || true; echo '```'; echo; echo \"## Patch\"; echo '```diff'; git -c color.ui=always --no-pager diff -- . ':(exclude)*.png' ':(exclude)*.jpg' ':(exclude)*.jpeg' ':(exclude)*.gif' ':(exclude)*.lock' || true; echo '```'; echo; echo \"## Lint\"; echo '```text'; pnpm -s lint || true; echo '```'; echo; echo \"## Typecheck\"; echo '```text'; pnpm -s typecheck || true; echo '```'; echo; echo \"## Tests\"; echo '```text'; pnpm -s test:all || pnpm -s test || true; echo '```'; echo; echo \"## OpenAPI\"; echo '```text'; pnpm -s openapi:lint || true; pnpm -s openapi:check || true; echo '```'; echo; echo \"## Security\"; echo '```text'; pnpm -s secret-scan || true; echo '```') > artifacts/report-full.md && echo '✅ artifacts/report-full.md'",
+    "// TESTS": "",
+    "test:unit": "vitest run --project unit",
+    "test:contracts": "vitest run --project contracts --passWithNoTests",
+    "test:integration": "vitest run --project integration --passWithNoTests",
+    "test:arch": "vitest run --project arch",
+    "test": "vitest run --project unit",
+    "test:all": "pnpm -s test:unit && pnpm -s test:contracts && pnpm -s test:integration && pnpm -s test:arch",
+    "test:watch": "vitest",
+    "test:ui": "vitest --ui",
+    "// TYPE / LINT / FORMAT": "",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "build": "tsc -p tsconfig.build.json",
+    "lint": "eslint .",
+    "lint:ci": "eslint . --max-warnings=0",
+    "lint:changed": "git diff --cached --name-only --diff-filter=d | grep -E '\\.(js|jsx|ts|tsx)$' | xargs --no-run-if-empty eslint --max-warnings=0 --no-warn-ignored",
+    "lint:fix": "eslint . --fix",
+    "format": "prettier -w .",
+    "format:check": "prettier -c .",
+    "// CI SUITES": "",
+    "ci:fast": "pnpm -s typecheck && pnpm -s lint:ci && pnpm -s test",
+    "ci:verify": "pnpm -s typecheck && pnpm -s lint:ci && pnpm -s test:all && pnpm -s openapi:lint:ci && pnpm -s openapi:check && pnpm -s secret-scan && pnpm -s build",
+    "// REGISTRY / INGEST": "",
+    "start:ingest": "tsx services/ingest/csvLoader.ts",
+    "run:evictions:landing": "tsx services/ingest/csvLoader.ts",
+    "run:evictions:landing:write": "DRY_RUN=false tsx services/ingest/csvLoader.ts",
+    "run:evictions:staging": "tsx services/transforms/evictionsTransform.ts",
+    "run:evictions:core": "tsx services/transforms/evictionsToCore.ts",
+    "registry:sf": "node scripts/build-datasf-index.mjs",
+    "registry:socrata:sf": "node scripts/build-datasf-index.mjs --domain=data.sfgov.org --out=municipalities/CA/SF/directory.json --tokenEnv=SOCRATA_APP_ID",
+    "registry:socrata:sf:build": "node scripts/build-datasf-index.mjs --domain=data.sfgov.org --out=municipalities/CA/SF/directory.json",
+    "registry:socrata:sf:validate": "node scripts/validate-datasf-index.mjs --file=municipalities/CA/SF/directory.json --domain=data.sfgov.org",
+    "registry:socrata:sf:rebuild": "pnpm run registry:socrata:sf:build && pnpm run registry:socrata:sf:validate",
+    "registry:socrata:detroit": "node scripts/build-datasf-index.mjs --domain=data.detroitmi.gov --out=municipalities/MI/Detroit/directory.json --tokenEnv=SOCRATA_APP_ID",
+    "registry:ckan:sandiego": "node scripts/build-ckan-index.mjs --base=https://data.sandiego.gov --out=municipalities/CA/SanDiego/directory.ckan.json --tokenEnv=SAN_DIEGO_CKAN_TOKEN",
+    "registry:arcgis:example": "node scripts/build-arcgis-index.mjs --portal=https://www.arcgis.com --out=municipalities/ARCGIS/directory.arcgis.json --query=type:(\"Feature Service\" OR \"Feature Layer\") AND owner:esri",
+    "registry:refresh": "npm run registry:socrata:sf && npm run registry:socrata:detroit",
+    "registry:merge": "node scripts/merge-registries.mjs",
+    "registry:load:pg": "node scripts/registry-to-pg.mjs --files=municipalities/CA/SF/directory.json,municipalities/MI/Detroit/directory.json",
+    "registry:all": "npm run registry:refresh && npm run registry:merge && npm run registry:load:pg",
+    "// DISCOVERY PRUNE": "",
+    "sf:discovery:prune": "pnpm -s build && node scripts/prune-sf-discovery.mjs --in=data/sf/directory.json --outDir=data/sf",
+    "// ENV / SECURITY / OPENAPI": "",
+    "env:local:init": "node scripts/env-local-init.mjs",
+    "env:validate": "node scripts/env-validate.mjs",
+    "check:env-import": "node scripts/check-env-import.mjs",
+    "secret-scan": "sh -c 'command -v gitleaks >/dev/null 2>&1 && gitleaks detect --no-git --redact -c .gitleaks.toml || (echo \"gitleaks not found. Install: brew install gitleaks\" >&2; exit 1)'",
+    "secret:staged": "node -e \"if(process.env.GITLEAKS_ALLOW==='1'){console.log('gitleaks bypassed (GITLEAKS_ALLOW=1)');process.exit(0)}\" && gitleaks detect --staged --redact -v",
+    "openapi:lint": "spectral lint openapi.yaml",
+    "openapi:lint:ci": "spectral lint openapi.yaml --fail-severity=warn",
+    "openapi:gen": "openapi-typescript openapi.yaml -o src/generated/openapi-types.d.ts --export-type",
+    "openapi:check": "pnpm -s openapi:gen && git diff --exit-code -- src/generated/openapi-types.d.ts",
+    "openapi:regen": "pnpm openapi:gen && pnpm typecheck",
+    "// TSD / SPEC": "",
+    "tsd": "tsd",
+    "spec:lint": "spectral lint openapi.yaml --fail-severity=warn",
+    "spec:types": "openapi-typescript openapi.yaml -o src/generated/openapi.ts --export-type",
+    "spec:check-types": "pnpm -s spec:types && git diff --exit-code -- src/generated/openapi.ts",
+    "spec:tsd": "tsd",
+    "spec:all": "pnpm -s spec:lint && pnpm -s spec:check-types && pnpm -s spec:tsd",
+    "docs:inject-ledger-link": "node scripts/dev-utils/inject-ledger-link.mjs",
+    "tm:validate-deps": "node scripts/dev-utils/validate-deps.mjs",
+    "// PRECOMMIT TARGET": "",
+    "verify:precommit": "pnpm -s format:check && pnpm -s lint:changed && node scripts/check-review-files.mjs && node scripts/scan-staged-for-todos.mjs",
+    "db:migrate:catalog": "psql \"$DATABASE_URL\" -f db/migrations/0010_catalog_municipality_index.sql",
+    "socrata:counts": "node bin/socrata-counts.mjs --regions=US,EU --page-size=500"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -113,10 +104,10 @@
     "eslint-plugin-regexp": "^2.0.0",
     "eslint-plugin-security": "^3.0.0",
     "eslint-plugin-sonarjs": "^3.0.5",
+    "husky": "^9.1.6",
     "openapi-typescript": "^7.9.1",
     "prettier": "^3.6.2",
     "ts-node": "^10.9.2",
-    "husky": "^9.1.6",
     "tsd": "^0.33.0",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2",
@@ -125,6 +116,7 @@
   "dependencies": {
     "dotenv": "^17.2.2",
     "fast-csv": "^5.0.5",
+    "kysely": "^0.28.5",
     "nanoid": "^5.0.7",
     "pg": "^8.16.3",
     "pg-copy-streams": "^7.0.0",
